# follow-the-gap

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/follow_the_gap/: .gitignore  __main__.py  algorithm.py
