[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "follow-the-gap"
dynamic = ["version"]
dependencies = [
    "numpy"
]
requires-python = ">= 3.8"
description = "Follow the gap is a geometric obstacle avoidance algorithm that will move toward goal point considering the largest gap."
readme = "README.md"

[project.optional-dependencies]
devtool = [
    "black",
    "ruff",
    "pre-commit"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/follow_the_gap/version.py"

[tool.hatch.build]
artifacts = [
  "src/follow_the_gap/version.py",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/follow_the_gap",
]

[project.scripts]
followthegap = "follow_the_gap.__main__:main"